--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": ">=3.0.0"
   },
   "dependencies": {
-    "pinia": "^2.0.14"
+    "pinia": "^2.0.14",
+    "vue": "^3.2.36"
   }
 }
