--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "use-flash-message-store",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "source": "src/index.ts",
   "main": "dist/index.js",
-  "module": "dist/module.js",
+  "module": "dist/module.mjs",
   "types": "types/types.d.ts",
   "scripts": {
     "watch": "parcel watch",
     "build": "parcel build"
   },
-  "packageManager": "yarn@3.2.1",
+  "packageManager": "yarn@3.5.1",
   "devDependencies": {
-    "@parcel/packager-ts": "2.6.0",
-    "@parcel/transformer-typescript-types": "2.6.0",
-    "parcel": "^2.6.0",
-    "prettier": "^2.6.2",
-    "typescript": ">=3.0.0"
+    "@parcel/packager-ts": "2.8.3",
+    "@parcel/transformer-typescript-types": "2.8.3",
+    "parcel": "^2.8.3",
+    "prettier": "^2.8.8",
+    "typescript": ">=5.0.4"
   },
   "dependencies": {
-    "pinia": "^2.0.14",
-    "vue": "^3.2.36"
+    "pinia": "^2",
+    "vue": "^3"
   }
 }
